# CodeChallenge

./: Python Coding Challenge.md  conftest.py  main.py  pyproject.toml  readme.md
.github/workflows/: main.yml
challenge/: ProcessText.py  main.py
tests/: test_encapsulation.py  test_file_inputs.py
text/: moby-dick.txt  test1.txt
workflows/: python-package.yml
