[tool.poetry]
name = "codechallenge"
version = "0.1.0"
description = ""
authors = ["Jon Morgan <morgan.jon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
pytest = "^7.1.1"
pytest-sugar = "^0.9.4"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
